<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="switcher_dark_theme">Тёмная тема</string>
    <string name="action_share_app">Поделиться приложением</string>
    <string name="support_contact">Написать в поддержку</string>
    <string name="button_user_agreement">Пользовательское соглашение</string>
    <string name="in_developing"><b>В разработке</b></string>
    <string name="uri_android_developer">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="uri_practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="my_email">starodumovtmt@yandex.ru</string>
    <string name="letter_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="letter_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="no_tracks_found">Ничего не нашлось</string>
    <string name="problems_when_searching_for_a_tracks">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_history">Вы искали</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="add_in_playlist">Добавить в плейлист</string>
    <string name="not_found_playlist">Вы не создали\n ни одного плейлиста</string>
    <string name="the_media_is_empty">Ваша медиатека пуста</string>
    <string name="clear_search_history">Очистить историю</string>
    <string name="update_search_activity">Обновить</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create_playlist">Создать</string>
    <string name="playlist_created">Плейлист «%1$s» создан</string>
    <string name="tracks_count">%1$d треков</string>
    <string name="add_track_in_playlist_failure">Трек уже добавлен в плейлист</string>
    <string name="add_track_in_playlist_success">Добавлено в плейлист</string>
    <string name="playlist_time_and_count">%1$d минут • %2$d треков</string>
    <string name="playlist_tracks_is_empty">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="no_tracks_in_playlist">В этом плейлисте нет треков</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_dialog_title">Хотите удалить плейлист «%1$s»?</string>
    <string name="delete_track_dialog_title">Хотите удалить трек?</string>
    <string name="dialog_finish_playlist_title">Завершить создание плейлиста?</string>
    <string name="dialog_finish_playlist_message">Все несохраненные данные будут потеряны</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="edit">Редактировать</string>0000
    <string name="save">Сохранить</string>
    <string name="finish">Завершить</string>
    <string name="channel_name_music">Music playback</string>
    <string name="channel_desc_music">Playback controls and status</string>
</resources>