<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?attr/themeBackground">

    <FrameLayout
        style="@style/HeaderFrameLayout"
        android:layout_marginBottom="24dp">

        <TextView
            style="@style/HeaderText"
            android:layout_marginStart="@dimen/margin_16dp"
            android:text="@string/settings" />

    </FrameLayout>

    <FrameLayout
        style="@style/HeaderFrameLayout">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/switcher_dark_theme"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_size_16sp"
            app:switchMinWidth="56dp"
            app:thumbTint="?attr/colorSwitchThumb"
            app:trackTint="?attr/colorSwitchTrack" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/btn_share_app"
        style="@style/HeaderFrameLayout">

        <TextView
            style="@style/RegularTextOnSettingsScreen"
            android:text="@string/action_share_app" />

        <ImageView
            style="@style/IconsOnTheSettingsScreen"
            android:src="@drawable/share_lm" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/btn_support_contact"
        style="@style/HeaderFrameLayout">

        <TextView
            style="@style/RegularTextOnSettingsScreen"
            android:text="@string/support_contact" />

        <ImageView
            style="@style/IconsOnTheSettingsScreen"
            android:src="@drawable/support_lm" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/btn_user_agreement"
        style="@style/HeaderFrameLayout">

        <TextView
            style="@style/RegularTextOnSettingsScreen"
            android:text="@string/button_user_agreement" />

        <ImageView
            style="@style/IconsOnTheSettingsScreen"
            android:src="@drawable/arrow_forward_lm" />

    </FrameLayout>

</LinearLayout>