<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/themeBackground">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top_56dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/spacing_56dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start_16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/spacing_16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end_16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/spacing_16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/spacing_24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/spacing_24dp" />

    <ImageButton
        android:id="@+id/arrow_back_create_playlist"
        style="@style/ArrowBackHeaderIcon"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_title"
        style="@style/HeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_12dp"
        android:text="@string/new_playlist"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_top_56dp"
        app:layout_constraintStart_toEndOf="@id/arrow_back_create_playlist"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/playlist_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_26dp"
        android:background="@drawable/playlist_photo_shape"
        android:clipToOutline="true"
        android:outlineProvider="background"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end_24dp"
        app:layout_constraintStart_toStartOf="@id/guideline_start_24dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_top_56dp"
        tools:targetApi="31" />

    <ImageView
        android:id="@+id/add_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/add_photo"
        app:layout_constraintBottom_toBottomOf="@+id/playlist_image"
        app:layout_constraintEnd_toEndOf="@+id/playlist_image"
        app:layout_constraintStart_toStartOf="@+id/playlist_image"
        app:layout_constraintTop_toTopOf="@+id/playlist_image" />

    <EditText
        android:id="@+id/playlist_name"
        style="@style/CreatePlaylistEditText"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edittext_border_create_playlist"
        android:hint="@string/playlist_name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:lines="1"
        android:padding="@dimen/spacing_16dp"
        android:textCursorDrawable="@drawable/text_entry_pointer"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end_16dp"
        app:layout_constraintStart_toStartOf="@+id/guideline_start_16dp"
        app:layout_constraintTop_toBottomOf="@+id/playlist_image" />

    <TextView
        android:id="@+id/playlist_name_label"
        style="@style/CreatePlaylistEditTextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlist_name"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/playlist_name"
        app:layout_constraintStart_toStartOf="@id/playlist_name"
        app:layout_constraintTop_toTopOf="@+id/playlist_name" />

    <EditText
        android:id="@+id/playlist_description"
        style="@style/CreatePlaylistEditText"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="@dimen/spacing_16dp"
        android:background="@drawable/edittext_border_create_playlist"
        android:hint="@string/playlist_description"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:lines="1"
        android:padding="@dimen/spacing_16dp"
        android:textCursorDrawable="@drawable/text_entry_pointer"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end_16dp"
        app:layout_constraintStart_toStartOf="@+id/guideline_start_16dp"
        app:layout_constraintTop_toBottomOf="@+id/playlist_name" />

    <TextView
        android:id="@+id/playlist_description_label"
        style="@style/CreatePlaylistEditTextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlist_description"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/playlist_description"
        app:layout_constraintStart_toStartOf="@id/playlist_description"
        app:layout_constraintTop_toTopOf="@+id/playlist_description" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_playlist_button"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="@dimen/spacing_1dp"
        android:layout_marginEnd="@dimen/spacing_1dp"
        android:layout_marginBottom="@dimen/spacing_32dp"
        android:background="@drawable/create_playlist_button"
        android:enabled="false"
        android:fontFamily="@font/ys_display_medium"
        android:stateListAnimator="@null"
        android:text="@string/create_playlist"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end_16dp"
        app:layout_constraintStart_toStartOf="@+id/guideline_start_16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
