<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="?attr/themeBackground">

    <FrameLayout
        style="@style/HeaderFrameLayout">

        <TextView
            style="@style/HeaderText"
            android:layout_marginStart="@dimen/spacing_16dp"
            android:text="@string/search" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_line_36dp"
        android:layout_marginTop="@dimen/spacing_8dp"
        android:layout_marginStart="@dimen/spacing_16dp"
        android:layout_marginEnd="@dimen/spacing_16dp">

        <EditText
            android:id="@+id/editing_search_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@drawable/rectangle"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:inputType="text"
            android:lines="1"
            android:paddingStart="@dimen/spacing_48dp"
            android:paddingEnd="@dimen/spacing_48dp"
            android:textColor="@color/navy_blue"
            android:textCursorDrawable="@drawable/text_entry_pointer"
            android:textSize="@dimen/text_size_16sp"
            android:imeOptions="actionDone"
            android:singleLine="true" />

        <ImageView
            android:layout_width="@dimen/spacing_16dp"
            android:layout_height="@dimen/spacing_16dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/spacing_16dp"
            android:backgroundTint="?attr/colorSearchForm"
            android:src="@drawable/search_icon"
            app:tint="?attr/colorDataInSearchForm" />

        <FrameLayout
            android:id="@+id/clean_button"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|end"
            android:background="#00FFFFFF"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/image_size_12dp"
                android:layout_height="@dimen/image_size_12dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="@dimen/spacing_16dp"
                android:backgroundTint="?attr/colorSearchForm"
                android:src="@drawable/button_clear"
                app:tint="?attr/colorDataInSearchForm" />
        </FrameLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/spacing_28dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_view_tracks_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="@dimen/layout_size_44dp"
            android:layout_height="@dimen/layout_size_44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_112dp"
            android:indeterminateTint="@color/bright_blue"
            android:visibility="gone" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/history_track_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_8dp"
                android:orientation="vertical"
                android:visibility="gone">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_size_52dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/ys_display_medium"
                        android:text="@string/search_history"
                        android:textColor="?attr/colorSecondary"
                        android:textSize="@dimen/text_size_19sp" />
                </FrameLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycle_view_tracks_search_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <android.widget.Button
                    android:id="@+id/clear_search_history_button"
                    style="@style/ButtonText"
                    android:layout_width="@dimen/layout_size_148dp"
                    android:layout_height="@dimen/layout_size_36dp"
                    android:layout_marginTop="@dimen/spacing_24dp"
                    android:layout_marginBottom="@dimen/spacing_56dp"
                    android:text="@string/clear_search_history" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/spacing_80dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/search_placeholder_image"
                android:layout_width="@dimen/image_size_120dp"
                android:layout_height="@dimen/image_size_120dp"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/search_placeholder_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_24dp"
                android:layout_marginStart="@dimen/spacing_24dp"
                android:layout_marginEnd="@dimen/spacing_24dp"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="@dimen/text_size_19sp"
                android:textColor="?attr/colorSecondary"
                android:textAlignment="center"
                android:visibility="invisible"
                tools:text="Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интенету"/>

            <FrameLayout
                android:id="@+id/search_refresh_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/spacing_24dp"
                android:visibility="invisible" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/refresh_button" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/ys_display_medium"
                    android:background="@android:color/transparent"
                    android:textSize="@dimen/text_size_14sp"
                    android:textColor="?attr/colorRefreshButton"
                    android:text="@string/update_search_activity" />

            </FrameLayout>

        </LinearLayout>

    </FrameLayout>
</LinearLayout>